--- a/static/css/style.css
+++ b/static/css/style.css
@@ -125,9 +125,6 @@ textarea {
   border: none;
 }
 
-.canvas-container {
-  float: right;
-}
 .canvas-container canvas {
   float: right;
   padding: 1px;
@@ -213,4 +210,23 @@ textarea {
 
 .select-box .option .radio {
   display: none;
+}
+
+.flexbox-container {
+  display: flex;
+}
+
+.flexbox-item {
+  width: 200px;
+  margin: 10px;
+  border: 3px solid #333;
+  background-color: #dfdfdf;
+}
+
+.flexbox-item-canva {
+  min-height: 100px;
+}
+
+.flexbox-item-utils {
+  min-height: 300px;
 }/*# sourceMappingURL=style.css.map */
