--- a/templates/snake.html
+++ b/templates/snake.html
@@ -20,8 +20,9 @@
             <img id="pie"
                  src="../static/img/pie.png">
         </div>
-    </div>
     <button id="start">Play!</button>
+    <button id="replay" style="display: none">Replay</button>
     <h3 id="defeatText" style="display: none">You lost!</h3>
+    </div>
     <script src="../static/snake.js">
 {% endblock %}
