--- a/templates/snake.html
+++ b/templates/snake.html
@@ -21,11 +21,11 @@
                  src="../static/img/pie.png">
         </div>
         <div class="replay-container">
-            <button id="replay" style="display: none">Replay</button>
+            <button id="replay" style="display: none">Zagraj jeszcze raz</button>
         </div>
-        <p class="pie-count">Pie count: 0</p>
-        <h3 id="defeatText" style="display: none">You lost!</h3>
-        <h3 id="hintText" style="display: block">Press an arrow to play</h3>
+        <p class="pie-count">Zjedzone kremówki: 0</p>
+        <h3 id="defeatText" style="display: none">Porażka!</h3>
+        <h3 id="hintText" style="display: block">Naciśnij ↑↓←→ by grać</h3>
     </div>
     <script src="../static/snake.js">
 {% endblock %}
