--- a/templates/snake.html
+++ b/templates/snake.html
@@ -11,6 +11,7 @@
 {% block style %}
 
     <link rel="stylesheet" href="../static/css/style.css">
+    <link rel="stylesheet" href="../static/css/snake.css">
 
 {% endblock %}
 
