--- a/templates/create-meme.html
+++ b/templates/create-meme.html
@@ -11,7 +11,7 @@
 {% block style %}
 
     <link rel="stylesheet" href="../static/css/style.css">
-    <link rel="stylesheet" href="../static/css/test.css">
+    {#<link rel="stylesheet" href="../static/css/test.css">#}
 
 {% endblock %}
 
