--- a/templates/snake.html
+++ b/templates/snake.html
@@ -17,16 +17,13 @@
 
 {% block content %}
     <div id="game">
-        <div style="display: none">
-            <img id="pie"
-                 src="../static/img/pie.png">
-        </div>
+        <h3 class="pie-count">Zjedzone kremówki: 0</h3>
+        <p id="pie-highScore">Najlepszy wynik: 0</p>
+        <h3 id="defeatText" style="display: none">Porażka!</h3>
+        <h3 id="hintText" style="display: block">Naciśnij ↑↓←→ by grać</h3>
         <div class="replay-container">
             <button id="replay" style="display: none">Zagraj jeszcze raz</button>
         </div>
-        <p class="pie-count">Zjedzone kremówki: 0</p>
-        <h3 id="defeatText" style="display: none">Porażka!</h3>
-        <h3 id="hintText" style="display: block">Naciśnij ↑↓←→ by grać</h3>
     </div>
     <script src="../static/snake.js">
 {% endblock %}
