--- a/templates/snake.html
+++ b/templates/snake.html
@@ -3,7 +3,7 @@
 
 {% block title %}
 
-    create-meme
+    snake
 
 {% endblock %}
 
@@ -16,7 +16,8 @@
 {% endblock %}
 
 {% block content %}
-    <div id="game">
+
+    <div id="game" style="margin: 3rem;">
         <h3 class="pie-count">Zjedzone kremówki: 0</h3>
         <p id="pie-highScore">Najlepszy wynik: 0</p>
         <h3 id="defeatText" style="display: none">Porażka!</h3>
@@ -25,5 +26,6 @@
             <button id="replay" style="display: none">Zagraj jeszcze raz</button>
         </div>
     </div>
-    <script src="../static/snake.js">
+
+    <script src="../static/snake.js"></script>
 {% endblock %}
