add fabric.js source

--- a/templates/base.html
+++ b/templates/base.html
@@ -60,6 +60,10 @@
             </div>
           </footer>
 
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/460/fabric.js"
+            integrity="sha512-d5yqsvICrC8y0ivNsNizSCHXjzireXYU6LmzAvcrL97GMwEn0VKx1vclEwvtsh/yPD2EcATnUG1oEtJuFcTE3Q=="
+            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
           <script src="../static/main.js"></script>
     </body>
     
