update err page

--- a/templates/404.html
+++ b/templates/404.html
@@ -6,8 +6,8 @@
 
 {% block content %}
 
-<div style="padding: 20px;">
-    <h1>Page {{ page }} not found</h1>
+<div style="padding: 40px;">
+    <h1  style="color: brown;">Page {{ page }} not found</h1>
 </div>
 
 {% endblock %}
