set default font to Impact, replace Roman with Courier

--- a/templates/create-meme.html
+++ b/templates/create-meme.html
@@ -38,15 +38,15 @@
                         <textarea placeholder="Add text" id="text"></textarea>
 
                         <div class="input-color-container">
-                            <input id="color" class="input-color" type="color">
+                            <input id="color" class="input-color" type="color" value="#ffffff">
                         </div>
 
                         <div>
                             <select id="font-control" name="font-control">
                                 <option selected value="Impact">Impact</option>
                                 <option value="Arial">Arial</option>
-                                <option value="Times New Roman">Times</option>
-                                <option value="Comic Sans MS">Comic Sans</option>
+                                <option value="Copperplate">Copperplate</option>
+                                <option value="Courier">Courier</option>
                             </select>
                         </div>
                     </div>
