resolve script conflicts

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <title>{% block title %} memeGen {% endblock %}</title>
 
-        <link rel="shortcut icon" type="image/x-icon" href="static/img/pika.ico" />
+        <link rel="icon" type="image/x-icon" href="static/img/pika.ico" />
 
         <!-- Bootstrap 5.2 -->
         <!-- CSS only -->
@@ -37,14 +37,15 @@
                             <a class="nav-link" href="/">Home</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="/snake">Gaming</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="/about">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/rick">Rick</a>
+                            <a class="nav-link" href="/matura-podlasie">Matura Podlasie</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/snake">Snake Game</a>
-                        </li>
+
                     </ul>
                 </div>
             </div>
@@ -60,11 +61,9 @@
             </div>
           </footer>
 
-          <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/460/fabric.js"
-            integrity="sha512-d5yqsvICrC8y0ivNsNizSCHXjzireXYU6LmzAvcrL97GMwEn0VKx1vclEwvtsh/yPD2EcATnUG1oEtJuFcTE3Q=="
-            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
-          <script src="../static/main.js"></script>
     </body>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     
 </html>
