rick -> matura podlasie

--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,9 @@
 
 <head>
     <meta charset="utf-8">
+
     <title>memeGen</title>
+
     <link rel="icon" type="image/x-icon" href="../static/img/pika.ico">
 
     <!-- Roboto font tags -->
@@ -38,7 +40,7 @@
             </div>
 
             <div class="option">
-                 <h2 class="text-center"><a href="/rick">Zadania matura Podlasie</a></h2>
+                 <h2 class="text-center"><a href="/matura-podlasie">Zadania matura Podlasie</a></h2>
             </div>
 
         </div>
