--- a/templates/about.html
+++ b/templates/about.html
@@ -15,7 +15,11 @@
 
 {% block content %}
 
-<h1>about</h1>
+<div style="padding: 20px;">
+    <h1>Tu będzie którki about</h1>
+
+</div>
+
 
 
 {% endblock %}
