--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -29,6 +29,7 @@ $myColors: (
 
 .navbar {
     background: linear-gradient(to right, color(k), color(j) );
+    // background: #ffffff7d;
 }
 
 body{ 
@@ -36,6 +37,7 @@ body{
     flex-direction:column; 
     height: 100vh;
     margin: 0;
+    // background: linear-gradient(color(k), color(a) );
     
     footer {
         text-align: center;
@@ -129,13 +131,16 @@ textarea {
 
 .input-color-container {
     position: relative;
+    margin-top: -2.8rem;
+    margin-right: -5.3rem;
     overflow: hidden;
     width: 40px;
     height: 40px;
     border: solid 5px transparent;
     border-radius: 50%;
-    margin-left: -1.5rem;
+    margin-left: +0.8rem;
   }
+
   
 .input-color {
     position: absolute;
@@ -144,13 +149,20 @@ textarea {
     width: 56px;
     height: 56px;
     border: none;
+    cursor: pointer;
+}
+
+#font-control {
+    position: relative;
+    right: -2.6rem;
+    top: +1.3rem;
 }
 
 .my-button {
     background-color: #f4511e;
     border: none;
     color: white;
-    padding: 16px 32px;
+    padding: 10px 32px;
     text-align: center;
     font-size: 16px;
     margin: 4px 2px;
@@ -159,15 +171,27 @@ textarea {
     display: inline-block;
     text-decoration: none;
     cursor: pointer;
+    border-radius: 20px;
+    box-shadow: 5px 5px gray;
     
 }
 
-
-
-.button:hover {
-    opacity: 1,
-
+.my-button:hover {
+    opacity: 1;
+    // color: color(k)
 }
+
+
+.text-edit {
+    display: flex;
+    align-items: center;
+    
+}
+
+.row {
+    margin: 10px;
+}
+
 
 
 .text {
@@ -181,11 +205,7 @@ textarea {
 
 .canvas-container {
 
-    // float: right;
-
-    // position: relative;
-    // right: 0;
-    // float: right;
+    float: right;
 
     canvas {
         float: right;
@@ -202,6 +222,10 @@ textarea {
     width: 1rem;
     flex-direction: column;
 
+}
+
+#searchField {
+    margin-bottom: 1.2rem;
 }
 
 
@@ -228,19 +252,25 @@ textarea {
     order: 0;
 }
 
-.selected::after {
-    content: "";
-    background: url("cow.svg");
-    background-size: contain;
-    background-repeat: no-repeat;
-    position: absolute;
-    height: 100%;
-    width: 32px;
-    right: 10px;
-    top: 5px;
-
-    transition: all 0.4s;
+.select-box:hover {
+    opacity: 1;
 }
+
+
+// .selected::after {
+//     content: "";
+//     background: url("../img/down-arrow.svg");
+//     background-size: contain;
+//     background-repeat: no-repeat;
+//     position: absolute;
+//     height: 30%;
+//     // width: 32px;
+//     right: 10px;
+//     // top: +16px;
+//     right: -4px;
+
+//     transition: all 0.4s;
+// }
 
 .select-box .options-container.active {
     max-height: 340px;
