--- a/templates/create-meme.html
+++ b/templates/create-meme.html
@@ -34,7 +34,7 @@
                 <!-- text&color -->
                 <div class="row">
 
-                    <div class="col-sm">                   
+                    <div class="col-lg text-edit">                   
                         <textarea placeholder="Add text" id="text"></textarea>
 
                         <div class="input-color-container">
@@ -50,17 +50,16 @@
                             </select>
                         </div>
                     </div>
-                    
-                    <div class="col-sm">
-                        <button class="my-button" id="addText">Add Text</button>
-                    </div>
 
                 </div>
 
                 <!--save buttons-->
                 <div class="row">
 
-                                        
+                    <div class="col-sm">
+                        <button class="my-button" id="addText">Add Text</button>
+                    </div>
+        
                     <div class="col-sm">
                         <button class="my-button" id="download">Download</button>
                     </div>
