--- a/templates/about.html
+++ b/templates/about.html
@@ -10,16 +10,18 @@
 
 {% block style %}
 
+<link  rel="stylesheet" href="../static/css/about.css">
 
 {% endblock %}
 
 {% block content %}
 
-<div style="padding: 20px;">
-    <h1>Tu będzie którki about</h1>
-
-</div>
-
-
+<div class="flexbox-container">
+    <div class="flexbox-item flexbox-item-1"></div>
+    <div class="flexbox-item flexbox-item-2"></div>
+    <div class="flexbox-item flexbox-item-3"></div>
+    <div class="axis main-axis"></div>
+    <div class="axis cross-axis"></div>
+  </div>
 
 {% endblock %}
