--- a/static/css/home.css
+++ b/static/css/home.css
@@ -2,7 +2,7 @@ body {
     height: auto;
     width: auto;
     background-size: 100%;
-    background: url("../img/yeye.png") no-repeat center center fixed;
+    background: url("../img/back1.png") no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -11,7 +11,7 @@ body {
 
 h1 {
     /* color: white; */
-    color: crimson ;
+    color: blueviolet ;
 
     font-size: 100px;
 }
