--- a/templates/base.html
+++ b/templates/base.html
@@ -27,23 +27,26 @@
         <!-- Navbar -->
         <nav class="navbar navbar-expand-sm navbar-dark">
             <div class="container">
-                <a class="navbar-brand" href="/create-meme">memeGenerator</a>
+                <a class="navbar-brand"><b><i>memeGen</i></b></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item active">
-                            <a class="nav-link" href="/">Home</a>
+                            <a class="nav-link" href="/home"><b>Home</b></a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="/create-meme"><b>MemeGenerator</b></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/snake">Gaming</a>
+                            <a class="nav-link" href="/snake"><b>Gaming</b></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/about">About</a>
+                            <a class="nav-link" href="/about"><b>About</b></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/matura-podlasie">Matura Podlasie</a>
+                            <a class="nav-link" href="/matura-podlasie"><b>Matura-Podlasie</b></a>
                         </li>
 
                     </ul>
