--- a/templates/home.html
+++ b/templates/home.html
@@ -24,7 +24,7 @@
 
 <body>
     <div class="milk-bar card">
-        <h1 class="text-center card-title">memeGen</h1>
+        <h1 class="text-center card-title">memeGem</h1>
         <div class="hide-options card-body" id="list-options">
 
             <div class="option">
