--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="utf-8">
-        <title>{% block title %} memeGen {% endblock %}</title>
+        <title>{% block title %} memeGem {% endblock %}</title>
 
         <link rel="icon" type="image/x-icon" href="static/img/pika.ico" />
 
@@ -27,7 +27,7 @@
         <!-- Navbar -->
         <nav class="navbar navbar-expand-sm navbar-dark">
             <div class="container">
-                <a class="navbar-brand"><b><i>memeGen</i></b></a>
+                <a class="navbar-brand"><b><i>memeGem</i></b></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
