--- a/templates/about.html
+++ b/templates/about.html
@@ -3,7 +3,7 @@
 
 {% block title %}
 
-    about
+  about
 
 {% endblock %}
 
@@ -16,12 +16,24 @@
 
 {% block content %}
 
-<div class="flexbox-container">
-    <div class="flexbox-item flexbox-item-1"></div>
-    <div class="flexbox-item flexbox-item-2"></div>
-    <div class="flexbox-item flexbox-item-3"></div>
-    <div class="axis main-axis"></div>
-    <div class="axis cross-axis"></div>
+<div class="container box">
+  <div class="col-sm">
+    <h1>memeGem</h1>
+    <p><i>
+      <b>memeGem</b>, czyli jedyne takie miejsce w internecie, w którym dzięki bogatej ofercie templejtów oraz 
+      możliwości wgrania swoich własnych zdjęć, możesz tworzyć wysokiej jakości memy oraz dzielić się nimi ze znajomymi. 
+      Jest to miejsce w którym oprócz podgladnięcia rozwiazań matury, możesz również oddać się rozrywce i pomóc wężowi zjeść cała masę kremówek.
+
+
+    </i></p>
+    
   </div>
+</div>
+
+<footer class="footer mt-auto py-3 bg-light">
+    <div class="container">
+      <span class="text-muted">(c) wwwjs project 2022 g24</span>
+    </div>
+</footer>
 
 {% endblock %}
