add navbar shadow

--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -30,6 +30,7 @@ $myColors: (
 .navbar {
     // background: linear-gradient(to right, color(k), color(j) );
     background: url("../img/back1.png") no-repeat center center fixed;
+    box-shadow: 0 5px 15px rgb(0 0 0 / 20%);
 }
 
 .nav-link {
