--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,6 @@
 .navbar {
   background: url("../img/back1.png") no-repeat center center fixed;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
 }
 
 .nav-link {
