--- a/templates/snake.html
+++ b/templates/snake.html
@@ -18,7 +18,7 @@
 {% block content %}
 
     <div id="game" style="margin: 3rem;">
-        <audio controls id="song" style="display: none">
+        <audio controls loop id="song" style="display: none">
             <source src="../static/audio/song.wav" type="audio/wav">
         </audio>
         <h3 class="pie-count">Zjedzone kremówki: 0</h3>
