--- a/templates/snake.html
+++ b/templates/snake.html
@@ -21,6 +21,9 @@
         <audio controls loop id="song" style="display: none">
             <source src="../static/audio/song.wav" type="audio/wav">
         </audio>
+        <audio controls id="sound" style="display: none">
+            <source src="../static/audio/sound.wav" type="audio/wav">
+        </audio>
         <h3 class="pie-count">Zjedzone kremówki: 0</h3>
         <p id="pie-highScore">Najlepszy wynik: 0</p>
         <h3 id="defeatText" style="display: none">Porażka!</h3>
