--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
         <!-- Navbar -->
         <nav class="navbar navbar-expand-sm navbar-dark">
             <div class="container">
-                <a class="navbar-brand"><b><i>memeGem</i></b></a>
+                <a class="navbar-brand"><b><i>memeGen</i></b></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
